--- a/StreamingSiteUI/package.json
+++ b/StreamingSiteUI/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^2.2.2",
+    "@ngu/carousel": "^1.4.8",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.1",
     "ngx-owl-carousel": "^2.0.7",
