--- a/StreamingSiteUI/package.json
+++ b/StreamingSiteUI/package.json
@@ -14,24 +14,30 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^2.2.2",
     "@ngu/carousel": "^1.4.8",
+    "@toverux/ngx-sweetalert2": "^4.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "ng2-opd-popup": "^1.1.21",
     "ngx-bootstrap": "^3.0.1",
     "ngx-owl-carousel": "^2.0.7",
+    "ngx-toasty": "^1.0.0",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
     "script-loader": "^0.7.2",
+    "sweetalert2": "^7.26.28",
     "video.js": "^7.1.0",
     "videogular2": "^6.3.0",
     "zone.js": "^0.8.19"
