--- a/StreamingSiteUI/package.json
+++ b/StreamingSiteUI/package.json
@@ -32,7 +32,9 @@
     "jquery": "^3.3.1",
     "ng2-opd-popup": "^1.1.21",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-loading": "^1.0.15",
     "ngx-owl-carousel": "^2.0.7",
+    "ngx-slick": "^0.2.1",
     "ngx-toasty": "^1.0.0",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
@@ -43,7 +45,7 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.4",
+    "@angular/cli": "^1.7.2",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/core-js": "^2.5.0",
