--- a/StreamingSiteUI/package.json
+++ b/StreamingSiteUI/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.3.1",
     "ng2-opd-popup": "^1.1.21",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-device-detector": "^1.3.4",
     "ngx-loading": "^1.0.15",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-slick": "^0.2.1",
